--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link rel="stylesheet" href="css/reveal.css">
-  <link rel="stylesheet" href="css/theme/black.css" id="theme">
+  <link rel="stylesheet" href="css/theme/{% if page.slides.theme %}{{ page.slides.theme }}{% else %}{{ site.slides.theme }}{% endif %}.css" id="theme">
+  <link rel="stylesheet" href="css/addition.css">
 
   <!-- Theme used for syntax highlighting of code -->
   <link rel="stylesheet" href="lib/css/zenburn.css">
