--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,7 +8,8 @@
     controls: true,
     progress: true,
     history: true,
-    center: true,
+    center: false,
+    slideNumber: true,
 
     transition: 'slide', // none/fade/slide/convex/concave/zoom
 
