--- a/css/print/pdf.css
+++ b/css/print/pdf.css
@@ -90,7 +90,7 @@ ul, ol, div, p {
 }
 
 .reveal .slides section {
-	page-break-after: always !important;
+	page-break-after: auto !important;
 
 	visibility: visible !important;
 	display: block !important;
