--- a/css/theme/material.css
+++ b/css/theme/material.css
@@ -234,8 +234,7 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #222;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  box-shadow: 2px 2px 10px 0 rgba(0, 0, 0, 0.15); }
 
 .reveal section img.plain {
   border: 0;
